--- a/backend_mo/build.gradle
+++ b/backend_mo/build.gradle
@@ -35,7 +35,7 @@ repositories {
             artifact()
         }
     }
-    flatDir { dirs "WEB-INF/lib" }
+    flatDir { dirs "lib" }
     
 }
 
