--- a/backend_mo/src/main/resources/aeservices.properties
+++ b/backend_mo/src/main/resources/aeservices.properties
@@ -33,11 +33,11 @@
 ################################################################################
 
 # Root URL/Protocol of the host SMS/AES server 
-sms.root=https://192.168.1.100
+#sms.root=http://192.168.1.104
 
 # CM Login@Location and Password
-cm.login=smsuser
-cm.password=Arisys123$
+#cm.login=smsuser
+#cm.password=Arisys123$
 
 #   This program can be configured to add, enable, disable, remove, and list AEServices
 #   servers on the specified CM.  The configuration consists of two parameters 'operation'
@@ -61,5 +61,5 @@ cm.password=Arisys123$
 #  The -add command will first attempt to create the AESVCS entry if it is missing.
 #  The -remove command will first attempt to disable the listed servers, if necessary
 #  If any servers are listed as "in use", this sample app will not allow you to disable or remove them
-operation=list
-options=
+#operation=list
+#options=
