--- a/backend_mo/src/main/resources/application.yml
+++ b/backend_mo/src/main/resources/application.yml
@@ -30,12 +30,12 @@ Globals:
   DbType : mysql
   mysql:
     DriverClassName : net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-    Url : jdbc:log4jdbc:mysql://192.168.85.45:3306/DB_IPCCINFO?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC&allowMultiQueries=true
-    UserName : ipcc
+    #Url : jdbc:log4jdbc:mysql://192.168.85.45:3306/DB_IPCCINFO?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC&allowMultiQueries=true
+    #UserName : ipcc
+    #Password : Qwer1234!@#$
+    Url : jdbc:log4jdbc:mysql://59.14.245.89:13306/DB_IPCCINFO?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC&allowMultiQueries=true
+    UserName : root
     Password : Qwer1234!@#$
-    #Url : jdbc:log4jdbc:mysql://localhost:3306/DB_IPCCINFO?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC&allowMultiQueries=true
-    #UserName : root
-    #Password : qwe123!@#
   ctisql:
     Url : jdbc:log4jdbc:mysql://192.168.85.11:3306/cube?useSSL=false&characterEncoding=utf8&allowPublicKeyRetrieval=true&serverTimezone=UTC&allowMultiQueries=true
     UserName : cube
