--- a/backend_mo/src/main/resources/egovframework/message/com/message-common.properties
+++ b/backend_mo/src/main/resources/egovframework/message/com/message-common.properties
@@ -44,6 +44,7 @@ member.idcheck.fail = \uc0ac\uc6a9 \uac00\ub2a5 \uc544\uc774\ub514 \uc785\ub2c8\
 common.idcheck.success = \uc0ac\uc6a9 \uac00\ub2a5 \ubc88\ud638 \uc785\ub2c8\ub2e4.
 common.idcheck.fail = \uc0ac\uc6a9 \ubd88\uac00\ub2a5\ud55c \ubc88\ud638 \uc785\ub2c8\ub2e4.
 #UI Common  Message#
+
 common.save.msg=\uc800\uc7a5\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
 common.regist.msg=\ub4f1\ub85d\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
 common.delete.msg=\uc0ad\uc81c\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
@@ -63,7 +64,7 @@ success.request.msg = \uc694\uccad\ucc98\ub9ac\uac00 \uc131\uacf5\uc801\uc73c\ub
 common.imposbl.fileupload = \ub354 \uc774\uc0c1 \ud30c\uc77c\uc744 \ucca8\ubd80\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 common.isConfmDe.msg=\uc2b9\uc778\uc77c\uc790\ub97c \ud655\uc778 \ubc14\ub78d\ub2c8\ub2e4.
 
-
+fial.common.info = \ud574\ub2f9\ud558\ub294 \uc815\ubcf4\uac00\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 fail.common.insert = \uc0dd\uc131\uc774 \uc2e4\ud328\ud558\uc600\uc2b5\ub2c8\ub2e4.
 fail.common.update = \uc218\uc815\uc774 \uc2e4\ud328\ud558\uc600\uc2b5\ub2c8\ub2e4.
 fail.common.delete = \uc0ad\uc81c\uac00 \uc2e4\ud328\ud558\uc600\uc2b5\ub2c8\ub2e4.
