기관 코드 업데이트

--- a/backend_mo/src/main/resources/egovframework/message/com/message-common.properties
+++ b/backend_mo/src/main/resources/egovframework/message/com/message-common.properties
@@ -93,6 +93,7 @@ info.user.passwordChange.ok = \ube44\ubc00\ubc88\ud638\uac00 \uc815\uc0c1\uc801\
 
 common.codeOk.msg = \uc0ac\uc6a9\ud558\uc2e4\uc218 \uc788\uc2b5\ub2c8\ub2e4.
 common.codeFail.msg = \uc0ac\uc6a9\ud558\uc2e4\uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+common.fail.systemCode = \uc2dc\uc2a4\ud15c \ucf54\ub4dc\uac00 \uc5c6\uc2b5\ub2c8\ub2e4.
 
 #UI Cop Message#
 cop.extrlUser = \uc678\ubd80\uc0ac\uc6a9\uc790
@@ -201,6 +202,9 @@ sym.log.atchFileList = \ucca8\ubd80\ud30c\uc77c\ubaa9\ub85d
 sym.ems.receiver = \ubc1b\ub294\uc0ac\ub78c
 sym.ems.title = \uc81c\ubaa9
 sym.ems.content = \ubc1c\uc2e0\ub0b4\uc6a9
+
+#menu Message
+menu.exist.fail = \ucc38\uc870\ub418\ub294 \uba54\ub274\uac00 \uc788\uc5b4 \uc0ad\uc81c\uac00 \uc2e4\ud328\ud558\uc600\uc2b5\ub2c8\ub2e4.
 
 #Vlidator Errors#
 errors.prefix=<div class="error"> 
