--- a/backend_mo/build.gradle
+++ b/backend_mo/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     compile group: 'taglibs', name: 'standard', version:'1.1.2'
     compile group: 'org.antlr', name: 'antlr', version:'3.5'
     
+    // https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
+	implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.6.2'
 
 	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'
    
@@ -135,7 +137,9 @@ dependencies {
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //mysql end 
     
-  
+    
+    //redis 연동
+    compile 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
     // lombok
     implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-web'
