--- a/backend_mo/src/main/resources/application.yml
+++ b/backend_mo/src/main/resources/application.yml
@@ -2,8 +2,9 @@ spring:
   profiles: 
     active: dev	
   redis :
-    host: localhost
-    port: 6379
+    host: 59.14.245.89
+    port: 30004
+    password : Rowa230927!@
   jackson:
     serialization:
      WRITE_DATES_AS_TIMESTAMPS: false
@@ -14,10 +15,10 @@ spring:
   #  username: admin
   #  password: Call110.go.kr
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+    host: 59.14.245.89
+    port: 30003
+    username: admin
+    password: Rowa230927!@
 server:
   servlet: 
     context-path: /
