--- a/backend_mo/src/main/resources/application.yml
+++ b/backend_mo/src/main/resources/application.yml
@@ -2,9 +2,8 @@ spring:
   profiles: 
     active: dev	
   redis :
-    host: 59.14.245.89
-    port: 30004
-    password : Rowa230927!@
+    host: localhost
+    port: 6379
   jackson:
     serialization:
      WRITE_DATES_AS_TIMESTAMPS: false
@@ -15,10 +14,10 @@ spring:
   #  username: admin
   #  password: Call110.go.kr
   rabbitmq:
-    host: 59.14.245.89
-    port: 30003
-    username: admin
-    password: Rowa230927!@
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   servlet: 
     context-path: /
