--- a/backend_mo/build.gradle
+++ b/backend_mo/build.gradle
@@ -37,24 +37,25 @@ repositories {
 bootWar.enabled = false
 war.enabled = true
 
+
 dependencies {
-    compile(group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0') {
+    implementation (group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0') {
 		exclude(module: 'commons-logging')
     }
    
     compileOnly fileTree(dir: 'src/main/resources/libs', includes: ['*.jar'])
     
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.psl.dataaccess', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.idgnr', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.property', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.string', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.crypto', version:'4.1.0'
-    compile group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.excel', version:'4.1.0'     
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.psl.dataaccess', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.idgnr', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.property', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.string', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.crypto', version:'4.1.0'
+    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.excel', version:'4.1.0'     
     
-    compile group: 'javax.servlet', name: 'jstl', version:'1.2'
-    compile group: 'taglibs', name: 'standard', version:'1.1.2'
-    compile group: 'org.antlr', name: 'antlr', version:'3.5'
+    implementation group: 'javax.servlet', name: 'jstl', version:'1.2'
+    implementation group: 'taglibs', name: 'standard', version:'1.1.2'
+    implementation group: 'org.antlr', name: 'antlr', version:'3.5'
     
     
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -70,7 +71,7 @@ dependencies {
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
 	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
 	
-	compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.8' 
+	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.8' 
 	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
 	implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
@@ -119,7 +120,7 @@ dependencies {
     
     
     //redis 연동
-    compile 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
     
     // com.sun.xml.bind : jwt
 	implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
@@ -162,9 +163,6 @@ dependencies {
 	// https://mvnrepository.com/artifact/net.sf.json-lib/json-lib
 	implementation "net.sf.json-lib:json-lib:2.4:jdk15"
 	
-	// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-	//testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.26'
-	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	
@@ -180,9 +178,6 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    //testImplementation 'com.h2database:h2'
-    //testImplementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
-    //testImplementation 'org.springframework.security:spring-security-test'
     
 }
 
