--- a/backend_mo/build.gradle
+++ b/backend_mo/build.gradle
@@ -43,32 +43,33 @@ dependencies {
 		exclude(module: 'commons-logging')
     }
    
-    compileOnly fileTree(dir: 'src/main/resources/libs', includes: ['*.jar'])
-    
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.psl.dataaccess', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.idgnr', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.property', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.string', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.crypto', version:'4.1.0'
-    implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.excel', version:'4.1.0'     
-    
-    implementation group: 'javax.servlet', name: 'jstl', version:'1.2'
-    implementation group: 'taglibs', name: 'standard', version:'1.1.2'
-    implementation group: 'org.antlr', name: 'antlr', version:'3.5'
-    
-    
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    
-    // https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
+	compileOnly fileTree(dir: 'src/main/resources/libs', includes: ['*.jar'])
+	
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.psl.dataaccess', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.idgnr', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.property', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.ptl.mvc', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.string', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.crypto', version:'4.1.0'
+	implementation group: 'org.egovframe.rte', name: 'org.egovframe.rte.fdl.excel', version:'4.1.0'     
+	
+	implementation group: 'javax.servlet', name: 'jstl', version:'1.2'
+	implementation group: 'taglibs', name: 'standard', version:'1.1.2'
+	implementation group: 'org.antlr', name: 'antlr', version:'3.5'
+	
+	implementation "org.springframework.boot:spring-boot-starter-aop"
+	
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
+	// https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
 	implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.6.2'
-
+	
 	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'
-   
+	
 	// https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api
 	compileOnly group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.3'
-    
-    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+	
+	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
 	compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
 	
 	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.8' 
@@ -89,96 +90,95 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger3
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	
 	
 	// https://mvnrepository.com/artifact/com.sun.xml.ws/jaxws-rt
 	implementation group: 'com.sun.xml.ws', name: 'jaxws-rt', version: '2.1.4'
 	
 	// RabbitMQ
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    testImplementation 'org.springframework.amqp:spring-rabbit-test'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
+		
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+		
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    
-    //developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    
+	//developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	
 	// https://mvnrepository.com/artifact/com.ibm.icu/icu4j
 	implementation group: 'com.ibm.icu', name: 'icu4j', version: '72.1'
-    
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
 	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
-    
-    
-    implementation 'mysql:mysql-connector-java'
-    //mysql jpa 기능 삭제
-    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    //mysql end 
-    
-    
-    //redis 연동
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
-    
-    // com.sun.xml.bind : jwt
+	
+	
+	implementation 'mysql:mysql-connector-java'
+	//mysql jpa 기능 삭제
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//mysql end 
+	
+	
+	//redis 연동
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
+	
+	// com.sun.xml.bind : jwt
 	implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
 	implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
 	// javax.xml.bind : jwt
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+		
 	
-
-    // lombok
-    implementation 'org.projectlombok:lombok'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    annotationProcessor 'org.projectlombok:lombok'
-    
-    // https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
+	// lombok
+	implementation 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	annotationProcessor 'org.projectlombok:lombok'
+	
+	// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
 	implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '7.0.5.Final'
-  
-    
+	
+	
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "2.17.2"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "2.17.2"
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "2.17.2"
-    
-    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jdk8')
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "2.17.2"
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "2.17.2"
+	
+	implementation('com.fasterxml.jackson.datatype:jackson-datatype-jdk8')
 	// 추후 spring security 관련 세팅 준비 해야함 
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
 	//implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-
-    
-    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
-    // 추후 spring security 관련 세팅 준비 해야함 
-    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+	
+	
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	// 추후 spring security 관련 세팅 준비 해야함 
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
 	//implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.7.1'
 	//implementation group: 'org.springframework.security', name: 'spring-security-core', version: '6.0.5'
 
 	
 
-       
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
-	
+		
 	// https://mvnrepository.com/artifact/net.sf.json-lib/json-lib
 	implementation "net.sf.json-lib:json-lib:2.4:jdk15"
-	
+		
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-	
+		
 	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore
 	implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.15'
-	
+		
 	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+		
+		
 	
+	testImplementation 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	
-    
-    testImplementation 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-    
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    
+	
 }
 
 test {
