--- a/backend_mo/src/main/resources/smsxml.properties
+++ b/backend_mo/src/main/resources/smsxml.properties
@@ -34,10 +34,11 @@
 
 # Root URL/Protocol of the host SMS/AES server 
 #sms.root=http://192.168.1.100:5022
-sms.root=http://192.168.1.104
+sms.root=http://192.168.90.43
 
 # CM Login@Location and Password
-cm.login=smsuser@192.168.1.100:5022
+cm.login=smsuser@192.168.90.11:5022
+#cm.login=smsuser@192.168.90.41:5022
 cm.password=Arisys123$
 
 # Output format can be either 'xml' or 'key-value'
