--- a/backend_mo/src/main/resources/stringnotation.properties
+++ b/backend_mo/src/main/resources/stringnotation.properties
@@ -37,12 +37,12 @@
 #real server
 sms.root=http://192.168.90.43
 # CM Login@Location and Password
-#cm.login=smsuser@192.168.1.100:5022
+#cm.login=smsuser@192.168.90.11:5022
 cm.login=smsuser@192.168.90.11:5022
 cm.password=Arisys123$
 
 # Output format can be either 'xml' or 'key-value'
-output.format=xml
+#output.format=xml
 #output.format=key-value
 # Request Parameters -
 # Same fields notation as deprecated interface.  These will be used to populate 
