--- a/backend_mo/src/main/resources/aeservices.properties
+++ b/backend_mo/src/main/resources/aeservices.properties
@@ -32,12 +32,12 @@
 # Demonstration Software.
 ################################################################################
 
-# Root URL/Protocol of the host SMS/AES server 
-#sms.root=http://192.168.1.104
+ Root URL/Protocol of the host SMS/AES server 
+sms.root=http://192.168.1.104
 
 # CM Login@Location and Password
-#cm.login=smsuser
-#cm.password=Arisys123$
+cm.login=smsuser
+cm.password=Arisys123$
 
 #   This program can be configured to add, enable, disable, remove, and list AEServices
 #   servers on the specified CM.  The configuration consists of two parameters 'operation'
