application.yml 설정값

--- a/backend_mo/src/main/resources/application.yml
+++ b/backend_mo/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         - common
 
 
-#################### common 공통 영역 ####################
+#################### common 공통 영역 #####################
 ---
 server:
   servlet: 
