--- a/backend_mo/src/main/resources/application.yml
+++ b/backend_mo/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
       prod:
         - prod
         - common
-      local:
-        - local
+      server:
+        - server
         - common
 
 
@@ -177,12 +177,12 @@ pbx-info:
     soap_ws_default_namespace : http://xml.avaya.com/ws/SystemManagementService/2008/07/01
     soap_format_xml : xml
     soap_sms_ns : http://xml.avaya.com/sms
-#################### 본인 local 영역 ####################
+#################### 서버 영역 ####################
 ---
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: server
 
 Globals:
   OsType : WINDOWS
@@ -203,13 +203,13 @@ Globals:
     Password : yesdev1!    
 
 spring.redis :
-     host: 192.168.22.175
+     host: 192.168.90.58
      port: 30004
      password : Rowa230927!@  
 
     
 spring.rabbitmq:
-    host: 192.168.22.175
+    host: 192.168.90.58
     port: 30003
     username: admin
     password: Rowa230927!@
